--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,26 +1,26 @@
 blocked-commands:
-    - "?"
-    - " "
-    - "bukkit:plugins"
-    - "bukkit:?"
-    - "bukkit:help"
-    - "bukkit:ver"
-    - "bukkit:version"
-    - "bukkit:about"
-    - "bukkit:pl"
-    - "bukkit:msg"
-    - "bukkit:kill"
-    - "bukkit:tell"
-    - "bukkit:me"
-    - "minecraft:me"
-    - "pl"
-    - "plugins"
-    - "me"
-    - "about"
-    - "version"
-    - "ver"
-    - "icanhasbukkit"
-    - "help"
+    - "/?"
+    - "/ "
+    - "/bukkit:plugins"
+    - "/bukkit:?"
+    - "/bukkit:help"
+    - "/bukkit:ver"
+    - "/bukkit:version"
+    - "/bukkit:about"
+    - "/bukkit:pl"
+    - "/bukkit:msg"
+    - "/bukkit:kill"
+    - "/bukkit:tell"
+    - "/bukkit:me"
+    - "/minecraft:me"
+    - "/pl"
+    - "/plugins"
+    - "/me"
+    - "/about"
+    - "/version"
+    - "/ver"
+    - "/icanhasbukkit"
+    - "/help"
     - "/calc"
     - "calc for(i=0;i<256;i++){for(j=0;j<256;j++){for(k=0;k<256;k++){for(l=0;l<256;l++){ln(pi)}}}}"
     - "/calc for(i=0;i<256;i++){for(j=0;j<256;j++){for(k=0;k<256;k++){for(l=0;l<256;l++){ln(pi)}}}}"
